{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 257,
  "lineage": "28ae9328-9c8e-752d-7e1a-5efc5d707583",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:439378700630:loadbalancer/app/comcai-berkay-test-alb/78500fa71d2ec975",
            "arn_suffix": "app/comcai-berkay-test-alb/78500fa71d2ec975",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-comcai-berkay-test-alb-408644494.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:439378700630:loadbalancer/app/comcai-berkay-test-alb/78500fa71d2ec975",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "comcai-berkay-test-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04dad269a9b908345"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-041c60bb809377531"
              },
              {
                "subnet_id": "subnet-07e286a791a7eac66"
              }
            ],
            "subnets": [
              "subnet-041c60bb809377531",
              "subnet-07e286a791a7eac66"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "comcai-berkay-test-alb",
              "berkay-test": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "comcai-berkay-test-alb",
              "berkay-test": "true"
            },
            "vpc_id": "vpc-05cc6106fef05812b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:439378700630:listener/app/comcai-berkay-test-alb/78500fa71d2ec975/0ae36bedf7214863",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:439378700630:targetgroup/comcai-berkay-test-tg-ip/d542d6578e516556",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:439378700630:listener/app/comcai-berkay-test-alb/78500fa71d2ec975/0ae36bedf7214863",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:439378700630:loadbalancer/app/comcai-berkay-test-alb/78500fa71d2ec975",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "dev",
              "Name": "comcai-berkay-test-listener",
              "berkay-test": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "comcai-berkay-test-listener",
              "berkay-test": "true"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_target_group.main",
            "module.vpc.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:439378700630:targetgroup/comcai-berkay-test-tg-ip/d542d6578e516556",
            "arn_suffix": "targetgroup/comcai-berkay-test-tg-ip/d542d6578e516556",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:439378700630:targetgroup/comcai-berkay-test-tg-ip/d542d6578e516556",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-central-1:439378700630:loadbalancer/app/comcai-berkay-test-alb/13eabcdb8bd5c902"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "comcai-berkay-test-tg-ip",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "comcai-berkay-test-tg-ip",
              "berkay-test": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "comcai-berkay-test-tg-ip",
              "berkay-test": "true"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-05cc6106fef05812b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04ba0b151c84c3517",
            "arn": "arn:aws:ec2:eu-central-1:439378700630:elastic-ip/eipalloc-04ba0b151c84c3517",
            "association_id": "eipassoc-02b177fcddf03e392",
            "domain": "vpc",
            "id": "eipalloc-04ba0b151c84c3517",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0f3c3700e71cc836d",
            "private_dns": "ip-10-0-1-158.eu-central-1.compute.internal",
            "private_ip": "10.0.1.158",
            "public_dns": "ec2-54-93-137-211.eu-central-1.compute.amazonaws.com",
            "public_ip": "54.93.137.211",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "comcai-berkay-test-nat-eip",
              "berkay-test": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "comcai-berkay-test-nat-eip",
              "berkay-test": "true"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:439378700630:internet-gateway/igw-06141f0504b714023",
            "id": "igw-06141f0504b714023",
            "owner_id": "439378700630",
            "tags": {
              "Environment": "dev",
              "Name": "comcai-berkay-test-igw",
              "berkay-test": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "comcai-berkay-test-igw",
              "berkay-test": "true"
            },
            "vpc_id": "vpc-05cc6106fef05812b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04ba0b151c84c3517",
            "association_id": "eipassoc-02b177fcddf03e392",
            "connectivity_type": "public",
            "id": "nat-07dcc9d959bba61c4",
            "network_interface_id": "eni-0f3c3700e71cc836d",
            "private_ip": "10.0.1.158",
            "public_ip": "54.93.137.211",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b0a7e735b7c97522",
            "tags": {
              "Environment": "dev",
              "Name": "comcai-berkay-test-nat-gateway",
              "berkay-test": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "comcai-berkay-test-nat-gateway",
              "berkay-test": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:439378700630:route-table/rtb-0e9d2e3a36dfd64ca",
            "id": "rtb-0e9d2e3a36dfd64ca",
            "owner_id": "439378700630",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07dcc9d959bba61c4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "comcai-berkay-test-private-rt",
              "berkay-test": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "comcai-berkay-test-private-rt",
              "berkay-test": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05cc6106fef05812b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:439378700630:route-table/rtb-00e049b04ad43597e",
            "id": "rtb-00e049b04ad43597e",
            "owner_id": "439378700630",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06141f0504b714023",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "comcai-berkay-test-public-rt",
              "berkay-test": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "comcai-berkay-test-public-rt",
              "berkay-test": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05cc6106fef05812b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e9f4819d11f4888",
            "route_table_id": "rtb-0e9d2e3a36dfd64ca",
            "subnet_id": "subnet-041c60bb809377531"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0e479b90ff5abf9",
            "route_table_id": "rtb-0e9d2e3a36dfd64ca",
            "subnet_id": "subnet-07e286a791a7eac66"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9645cdfafbfca91",
            "route_table_id": "rtb-00e049b04ad43597e",
            "subnet_id": "subnet-0b0a7e735b7c97522"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0575ab2aac1f3367f",
            "route_table_id": "rtb-00e049b04ad43597e",
            "subnet_id": "subnet-0d541ea839d3a7202"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:439378700630:security-group/sg-04dad269a9b908345",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04dad269a9b908345",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "comcai-berkay-test-alb-sg",
            "name_prefix": "",
            "owner_id": "439378700630",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "comcai-berkay-test-alb-sg",
              "berkay-test": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "comcai-berkay-test-alb-sg",
              "berkay-test": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05cc6106fef05812b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:439378700630:security-group/sg-0a55aa408aaa7b972",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a55aa408aaa7b972",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04dad269a9b908345"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS from ALB",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04dad269a9b908345"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "comcai-berkay-test-ecs-sg",
            "name_prefix": "",
            "owner_id": "439378700630",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "comcai-berkay-test-ecs-sg",
              "berkay-test": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "comcai-berkay-test-ecs-sg",
              "berkay-test": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05cc6106fef05812b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elasticache_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:439378700630:security-group/sg-0861b1ab34dcc7f38",
            "description": "Security group for ElastiCache Redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0861b1ab34dcc7f38",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis from ECS",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a55aa408aaa7b972"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "comcai-berkay-test-elasticache-sg",
            "name_prefix": "",
            "owner_id": "439378700630",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "comcai-berkay-test-elasticache-sg",
              "berkay-test": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "comcai-berkay-test-elasticache-sg",
              "berkay-test": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05cc6106fef05812b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.alb_sg",
            "module.vpc.aws_security_group.ecs_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:439378700630:subnet/subnet-041c60bb809377531",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041c60bb809377531",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "439378700630",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "comcai-berkay-test-private-subnet-1",
              "Type": "private",
              "berkay-test": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "comcai-berkay-test-private-subnet-1",
              "Type": "private",
              "berkay-test": "true"
            },
            "vpc_id": "vpc-05cc6106fef05812b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:439378700630:subnet/subnet-07e286a791a7eac66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e286a791a7eac66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "439378700630",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "comcai-berkay-test-private-subnet-2",
              "Type": "private",
              "berkay-test": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "comcai-berkay-test-private-subnet-2",
              "Type": "private",
              "berkay-test": "true"
            },
            "vpc_id": "vpc-05cc6106fef05812b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:439378700630:subnet/subnet-0b0a7e735b7c97522",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0a7e735b7c97522",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "439378700630",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "comcai-berkay-test-public-subnet-1",
              "Type": "public",
              "berkay-test": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "comcai-berkay-test-public-subnet-1",
              "Type": "public",
              "berkay-test": "true"
            },
            "vpc_id": "vpc-05cc6106fef05812b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:439378700630:subnet/subnet-0d541ea839d3a7202",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d541ea839d3a7202",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "439378700630",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "comcai-berkay-test-public-subnet-2",
              "Type": "public",
              "berkay-test": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "comcai-berkay-test-public-subnet-2",
              "Type": "public",
              "berkay-test": "true"
            },
            "vpc_id": "vpc-05cc6106fef05812b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:439378700630:vpc/vpc-05cc6106fef05812b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f0faedc623eb071e",
            "default_route_table_id": "rtb-01e778edd10c9d28b",
            "default_security_group_id": "sg-040e6a4b095f7c4a7",
            "dhcp_options_id": "dopt-0fd1461d65128f406",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05cc6106fef05812b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01e778edd10c9d28b",
            "owner_id": "439378700630",
            "tags": {
              "Environment": "dev",
              "Name": "comcai-berkay-test-vpc",
              "berkay-test": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "comcai-berkay-test-vpc",
              "berkay-test": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}